[package]
name = "sparkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.35.0"
winit = "0.29.8"
image = "0.24.0"
cgmath = "0.18.0"
num = "0.4.1"
libm = "0.2.5"
legion = "0.4.0"
#glutin = "0.32.0"
tobj = "4.0.2"
